--- a/display-exercise.html
+++ b/display-exercise.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
   <title>CSS Layout Exercises | display property</title>
@@ -13,10 +12,20 @@
   <!-- styles -->
   <link rel="stylesheet" type="text/css" href="styles/main.css">
   <!-- your styles will go in display-page.css -->
-  <link rel="stylesheet" type="text/css" href="styles/display-page.css">
+    <link rel="stylesheet" type="text/css" href="styles/display-page.css">
 </head>
 <body>
-<!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+  <main>
+    <div class="box-parent">
+      <div class="top">
+    <div class="top top-green"></div>
+    <div class="top top-blue"></div>
+      <div class="bottom">
+    <div class="bottom bottom-grey"></div>
+    <div class="bottom bottom-black"></div>
+    <div class='bottom bottom-orange'></div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
