--- a/display-exercise.html
+++ b/display-exercise.html
@@ -18,12 +18,13 @@
   <main>
     <div class="box-parent">
       <div class="top">
-    <div class="top top-green"></div>
-    <div class="top top-blue"></div>
+        <div class="top top-green"></div>
+        <div class="top top-blue"></div>
+      </div>
       <div class="bottom">
-    <div class="bottom bottom-grey"></div>
-    <div class="bottom bottom-black"></div>
-    <div class='bottom bottom-orange'></div>
+        <div class="bottom bottom-grey"></div>
+        <div class="bottom bottom-black"></div>
+        <div class='bottom bottom-orange'></div>
       </div>
     </div>
   </main>
